# gallery-dl-auto

./: .gitignore  .pre-commit-config.yaml  =1.28.0  CLAUDE.md  INTEGRATION.md  README.md  batch_download.py  config.yaml  pyproject.toml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md  v1.0-MILESTONE-AUDIT.md.backup
.planning/debug/: knowledge-base.md  limit-offset-precision-issue.md  pixiv-download-returns-zero-total.md
.planning/debug/resolved/: json-output-error-format.md  success-list-duplicate-ids-multi-page-artworks.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-MILESTONE-AUDIT.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md  v1.2-MILESTONE-AUDIT.md  v1.2-REQUIREMENTS.md  v1.2-ROADMAP.md  v1.3-REQUIREMENTS.md  v1.3-ROADMAP.md
.planning/phases/01-项目基础/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-token-automation/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
config/: download.yaml
docs/: project-summary-2026-03-02.md  test-report-2026-03-02.md  verification-commands-2026-03-02.md
docs/plans/: 2026-03-01-mode-mapping-fix-design.md  2026-03-01-mode-mapping-fix-implementation.md  2026-03-03-cli-comprehensive-test-design.md  2026-03-03-cli-comprehensive-test-implementation.md  2026-03-03-jsonl-output-format-design.md  2026-03-03-jsonl-output-format.md  2026-03-08-cross-day-dedup-design.md  2026-03-08-cross-day-dedup-implementation.md  README.md  mode-component-design.md  mode-dataflow-design.md  mode-error-handling-design.md  mode-mapping-architecture.md  mode-testing-strategy.md
docs/requirements/: cross-day-dedup.md
src/gallery_dl_auto/: __init__.py
src/gallery_dl_auto/api/: __init__.py  (+1 more)
tests/: README.md  __init__.py  conftest.py  test_auth.py  test_cli_auth.py  test_cli_refresh.py  test_conftest_fixtures.py  test_token_storage.py
tests/api/: test_pixiv_client.py
tests/cli/: __init__.py  conftest.py  test_doctor_cmd.py  test_download_cmd.py  test_download_cmd_interrupt.py  test_integration.py  test_json_help.py  test_json_output.py  test_login_cmd.py  test_logout_cmd.py  test_main_commands.py  test_main_logging.py  test_refresh_cmd.py  test_status_cmd.py  test_validators.py  test_version_cmd.py
tests/config/: test_download_config.py
tests/core/: test_mode_manager.py
tests/download/: __init__.py  test_download_tracker.py  test_file_downloader.py  test_progress_manager.py  test_progress_reporter.py  test_ranking_downloader.py  test_rate_limiter.py  test_resume_manager.py  test_retry_handler.py
tests/fixtures/: README.md  __init__.py  mock_pixiv_responses.py  test_data.py  test_fixtures.py
tests/integration/: test_gallery_dl_wrapper.py  test_gallery_dl_wrapper_dedup.py  test_parse_download_output_dedup.py  test_phase6_integration.py  test_ranking_download.py
tests/models/: __init__.py  test_artwork.py  test_error_response.py
tests/test_cli/: test_config_cmd.py  test_main.py
tests/test_config/: __init__.py  test_loader.py  test_schema.py
tests/utils/: test_filename_sanitizer.py  test_helpers.py  test_logging.py  test_path_template.py  test_test_helpers.py
tests/validation/: VALIDATION_RESULTS.md  __init__.py  conftest.py  test_exit_codes.py  test_integration.py  test_json_schemas.py
(+166 files in other folders)
